Fix fonts. Add first mixin UI kits (text field)

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,9 +1,10 @@
-
+include ../utils/textfield
 doctype html
 html
   include ../includes/head
   body
-    h1 LOL
+    +textfield 
+    
 
     script(src='/dist/main.js')
     
