--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,4 +2,7 @@
 @import 'var'
 //Fonts
 @import 'fonts'
-@import './blocks/_test'
+//Settings
+@import 'settings'
+//Textfield
+@import './blocks/_textfield'
