--- a/src/sass/fonts.sass
+++ b/src/sass/fonts.sass
@@ -1,10 +1,12 @@
 @font-face 
     font-family: MainBold, sans-serif
-    src: url('../fonts/Montserrat-Bold.ttf')
+    src: url('../fonts/montserrat-bold.woff')
+    src: url('../fonts/Montserrat-bold.woff2')
 
 @font-face 
     font-family: MainRegular, sans-serif
-    src: url('../fonts/Montserrat-Regular.ttf')
+    src: url('../fonts/montserrat-regular.woff')
+    src: url('../fonts/montserrat-regular.woff2')
 
 
 
