--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,9 +1,11 @@
+include ../utils/dropdown
 include ../utils/textfield
 doctype html
 html
   include ../includes/head
   body
-    +textfield 
+    //- +textfield
+    +dropdown
     
 
     script(src='/dist/main.js')
