--- a/src/sass/blocks/_textfield.sass
+++ b/src/sass/blocks/_textfield.sass
@@ -13,10 +13,10 @@
             text-transform: uppercase
             line-height: 15px
             font-size: 12px
-            color: $darkShade100    
+            color: $darkShade100
     &-input
         display: flex
-        &__input 
+        &__input
             width: 320px
             height: 44px
             padding-left: 15px
@@ -26,4 +26,12 @@
             border: 1px solid rgba(31, 32, 65, 0.25)
             border-radius: 4px
             outline: none
-            
+        &__images
+            position: absolute
+            padding: 15px
+            margin-left: 275px
+            cursor: pointer
+            visibility: hidden
+.vis
+    opacity: 1
+    visibility: visible
