Full created dropdonw (room, people), subs text field ready. In process checkbox

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,11 +1,14 @@
 include ../utils/dropdown
 include ../utils/textfield
+include ../utils/checkboxlist
 doctype html
 html
   include ../includes/head
   body
-    +textfield
-    +dropdown
+    //- +textfield
+    //- +dropdownroom
+    //- +dropdownpeople
+    +checkbox
     
 
     script(src='/dist/main.js')
