--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -7,6 +7,9 @@
 //Textfield
 @import './blocks/_textfield'
 //Dropdown
-@import './blocks/_dropdown'
+@import './blocks/_dropdownroom'
+@import './blocks/_dropdownpeople'
 //reset
 // @import '_normilize'
+//checkbox
+@import './blocks/_checkboxlist'
