--- a/src/sass/blocks/_dropdownpeople.sass
+++ b/src/sass/blocks/_dropdownpeople.sass
@@ -1,8 +1,8 @@
-.dropdown
+.dropdownp
     display: flex
     flex-direction: column
     width: 320px
-    height: 67px
+    height: 44px
     &-header
         display: flex
         justify-content: space-between
@@ -29,21 +29,25 @@
             font-size: 14px
             color: $darkShade75
             font-family: MainRegular, sans-serif
-
-.ddr
+    
+    
+.ddp
     display: flex
     flex-direction: column
     width: 318px
+    height: 159px
     border: 1px solid rgba(31, 32, 65, 0.25)
     border-bottom-left-radius: 4px
     border-bottom-right-radius: 4px
     visibility: hidden
     opacity: 0
     transition: 0.2s
+    margin-top: 23px
     &-item
         display: flex
         justify-content: space-between
-        padding: 7px 7px 7px 15px
+        align-items: center
+        padding: 7px 7px 0px 15px
         &__text
             font-size: 12px
             font-family: MainBold, sans-serif
@@ -66,6 +70,7 @@
         font-weight: bold
         text-transform: uppercase
         font-size: 12px
+        margin-top: 15px
         color: $purple
         &__sub
             cursor: pointer
@@ -73,35 +78,6 @@
             cursor: pointer
             visibility: hidden
             opacity: 0
-
-.circle
-    width: 30px
-    height: 30px
-    border-radius: 90%
-    border: 1px solid rgba(31, 32, 65, 0.25)
-    display: flex
-    align-items: center
-    justify-content: center
-    cursor: pointer
-    &-text
-        font-size: 18px
-        color: $darkShade50
-        font-family: MainRegular, sans-serif
-
-.circlemin
-    width: 30px
-    height: 30px
-    border-radius: 90%
-    border: 1px solid rgba(31, 32, 65, 0.25)
-    display: flex
-    align-items: center
-    justify-content: center
-    cursor: pointer
-    opacity: 0.5
-    &-text
-        font-size: 18px
-        color: $darkShade50
-        font-family: MainRegular, sans-serif
 
 .vis
     opacity: 1
