Ready checkboxlist, "miniinfo", checkbox button and radio buttons

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,6 +1,8 @@
 include ../utils/dropdown
 include ../utils/textfield
 include ../utils/checkboxlist
+include ../utils/radiobtn
+include ../utils/miniinfo
 doctype html
 html
   include ../includes/head
@@ -8,7 +10,10 @@ html
     //- +textfield
     //- +dropdownroom
     //- +dropdownpeople
-    +checkbox
+    //- +checkbox
+    //- +checkboxbuttons
+    //- +radiobtn
+    +miniinfo
     
 
     script(src='/dist/main.js')
