--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -13,3 +13,7 @@
 // @import '_normilize'
 //checkbox
 @import './blocks/_checkboxlist'
+//RadioBtn
+@import './blocks/_radiobtn'
+//MiniInfo
+@import './blocks/__miniinfo'
