add toggle button

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -3,6 +3,7 @@ include ../utils/textfield
 include ../utils/checkboxlist
 include ../utils/radiobtn
 include ../utils/miniinfo
+include ../utils/toggle
 doctype html
 html
   include ../includes/head
@@ -13,7 +14,8 @@ html
     //- +checkbox
     //- +checkboxbuttons
     //- +radiobtn
-    +miniinfo
+    //- +miniinfo
+    +toggle
     
 
     script(src='/dist/main.js')
