--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,6 +4,7 @@ include ../utils/checkboxlist
 include ../utils/radiobtn
 include ../utils/miniinfo
 include ../utils/toggle
+include ../utils/likebutton
 doctype html
 html
   include ../includes/head
@@ -15,7 +16,8 @@ html
     //- +checkboxbuttons
     //- +radiobtn
     //- +miniinfo
-    +toggle
+    //- +toggle
+    +likebutton
     
 
     script(src='/dist/main.js')
