--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -5,6 +5,7 @@ include ../utils/radiobtn
 include ../utils/miniinfo
 include ../utils/toggle
 include ../utils/likebutton
+include ../utils/richcheck
 doctype html
 html
   include ../includes/head
@@ -17,8 +18,8 @@ html
     //- +radiobtn
     //- +miniinfo
     //- +toggle
-    +likebutton
-    
+    //- +likebutton
+    +richcheck
 
     script(src='/dist/main.js')
     
