add bullet list

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,6 +6,7 @@ include ../utils/miniinfo
 include ../utils/toggle
 include ../utils/likebutton
 include ../utils/richcheck
+include ../utils/bullet
 doctype html
 html
   include ../includes/head
@@ -19,7 +20,8 @@ html
     //- +miniinfo
     //- +toggle
     //- +likebutton
-    +richcheck
+    //- +richcheck
+    +bullet
 
     script(src='/dist/main.js')
     
