--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,6 +7,7 @@ include ../utils/toggle
 include ../utils/likebutton
 include ../utils/richcheck
 include ../utils/bullet
+include ../utils/comment
 doctype html
 html
   include ../includes/head
@@ -21,7 +22,8 @@ html
     //- +toggle
     //- +likebutton
     //- +richcheck
-    +bullet
+    //- +bullet
+    +comment
 
     script(src='/dist/main.js')
     
