--- a/src/pug/utils/likebutton.pug
+++ b/src/pug/utils/likebutton.pug
@@ -1,6 +1,5 @@
-mixin likebutton(name='like button')
+mixin likebutton
     .like
-        .like-head=name 
         .like-like 
             button.like-like__btn
                 .like-like__icon
