--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -8,6 +8,11 @@ include ../utils/likebutton
 include ../utils/richcheck
 include ../utils/bullet
 include ../utils/comment
+include ../utils/rate
+include ../utils/buttonsVar1
+include ../utils/buttonsVar2
+include ../utils/buttonsVar3
+include ../utils/buttonsVar4
 doctype html
 html
   include ../includes/head
@@ -24,6 +29,11 @@ html
     //- +richcheck
     //- +bullet
     +comment
+    +rate
+    +buttonsVar1
+    +buttonsVar2
+    +buttonsVar3
+    +buttonsVar4
 
     script(src='/dist/main.js')
     
