--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -27,3 +27,7 @@
 @import './blocks/_bullet'
 //Comment
 @import './blocks/_comment'
+//Rate
+@import './blocks/_rate'
+//BTNS
+@import './blocks/_buttons'
